--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-132885.htm" title="围墙内外：科学上网为何在中国步履维艰？">围墙内外：科学上网为何在中国步履维艰？</a></li>
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-132620.htm" title="Clash规则配置全攻略：从入门到精通的流量管理艺术">Clash规则配置全攻略：从入门到精通的流量管理艺术</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-135802.htm" title="突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南">突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-133513.htm" title="颠覆与融合：The Clash的音乐革命及其文化冲击波">颠覆与融合：The Clash的音乐革命及其文化冲击波</a></li>
+                        <li class="py-2"><a href="/news/article-135602.htm" title="意大利Clash全面解析：从入门到精通的高级代理工具指南">意大利Clash全面解析：从入门到精通的高级代理工具指南</a></li>
+                        <li class="py-2"><a href="/news/article-145391.htm" title="安卓Clash深度指南：从零开始掌握高效代理工具">安卓Clash深度指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-131625.htm" title="安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界">安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界</a></li>
                         <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
-                        <li class="py-2"><a href="/news/article-140070.htm" title="科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析">科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析</a></li>
-                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-135263.htm" title="解锁网络自由：R6800路由器科学上网全攻略与深度解析">解锁网络自由：R6800路由器科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-139007.htm" title="突破网络边界：科学上网小工具的终极指南与深度解析">突破网络边界：科学上网小工具的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-137585.htm" title="从SSR到V2RayNG的完美迁移：全方位代理升级指南">从SSR到V2RayNG的完美迁移：全方位代理升级指南</a></li>
+                        <li class="py-2"><a href="/news/article-131980.htm" title="安卓Clash全面指南：从下载到精通，解锁网络自由新境界">安卓Clash全面指南：从下载到精通，解锁网络自由新境界</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
