--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -125,6 +125,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、韩国、加拿大、日本、欧洲、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、日本、美国、新加坡、欧洲、加拿大、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-27">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、韩国、美国、日本、欧洲、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-26">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-26-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-26-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、加拿大、美国、韩国、日本、新加坡等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-25">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-25-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-25-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、欧洲、香港、新加坡、日本、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-24">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-24-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-24-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、加拿大、新加坡、日本、美国、韩国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-23">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -181,90 +265,6 @@
                                     引言：为什么你需要掌握CLASH配置？  在数字时代，网络访问的自由度直接影响信息获取的效率与质量。CLASH作为一款开源代理工具，凭借其灵活的规则引擎和跨平台支持，已成为技术爱好者突破网络限制的利器                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-20">
-                            <div class="col-md-3">
-                                <a href="/news/article-146855.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250110/28ec9101bbd586e2e9fa25ac86696d60.webp" alt="突破网络边界：iPhone科学上网全攻略与深度解析" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-146855.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">突破网络边界：iPhone科学上网全攻略与深度解析</h3>
-                                </a>
-                                <p>
-                                    引言：数字时代的通行证  当谷歌学术的最新论文、YouTube的创意视频、Twitter的全球热点与你仅一墙之隔时，科学上网技术便成为现代网民必备的数字生存技能。在中国特殊的网络环境下，iPhone用                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-19">
-                            <div class="col-md-3">
-                                <a href="/news/article-146488.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250110/534fb3427c0445e58b030bfb616cfc3a.webp" alt="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-146488.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</h3>
-                                </a>
-                                <p>
-                                    引言：数字时代的网络自由探索  在全球化信息浪潮中，互联网本应是无国界的知识海洋，但现实中的网络管制让许多用户面临"信息孤岛"的困境。广东朱先生团队研发的科学上网技术，正是在这样的背景下应运而生的一项                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-18">
-                            <div class="col-md-3">
-                                <a href="/news/article-146122.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250110/0c91ff482f2565f4d382f5bd7f44d839.webp" alt="解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-146122.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa</h3>
-                                </a>
-                                <p>
-                                    在当今数字时代，网络自由和隐私保护已成为每个互联网用户的基本需求。无论你是想突破地域限制访问全球内容，还是希望在公共Wi-Fi下保护个人数据安全，一款可靠的代理工具都不可或缺。对于iOS用户而言，Sh                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-17">
-                            <div class="col-md-3">
-                                <a href="/news/article-145753.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250110/534fb3427c0445e58b030bfb616cfc3a.webp" alt="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-145753.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</h3>
-                                </a>
-                                <p>
-                                    引言：当网络边界遇上加速利器  在信息全球化的今天，互联网的“地理围墙”却让许多用户陷入困境——海外教育资源、流媒体平台或游戏服务常因网络限制而无法访问。面对这一痛点，迅游加速器凭借其稳定的节点网络和                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-16">
-                            <div class="col-md-3">
-                                <a href="/news/article-145391.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250110/0c91ff482f2565f4d382f5bd7f44d839.webp" alt="安卓Clash深度指南：从零开始掌握高效代理工具" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-145391.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">安卓Clash深度指南：从零开始掌握高效代理工具</h3>
-                                </a>
-                                <p>
-                                    在当今数字化时代，网络自由与隐私保护已成为现代网民的刚需。作为一款风靡全球的代理工具，Clash凭借其卓越的性能和灵活的配置，在安卓平台上脱颖而出。本文将带您深入探索这款工具的方方面面，从基础安装到高                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-15">
-                            <div class="col-md-3">
-                                <a href="/news/article-145028.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250110/cf5afa812c2615e5db9ceccd12a1f33a.webp" alt="手机变身为代理服务器：详解v2rayNg网络共享全攻略" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-145028.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">手机变身为代理服务器：详解v2rayNg网络共享全攻略</h3>
-                                </a>
-                                <p>
-                                    在当今互联网环境中，科学上网已成为许多用户的刚需。而作为Android平台上广受欢迎的代理工具，v2rayNg凭借其出色的性能和稳定性赢得了大量用户的青睐。但你是否知道，通过简单的设置，你的手机完全可                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-08/page-2.htm">2</a></li><li><a href="/date/2025-08/page-3.htm">3</a></li> <li><a href="/date/2025-08/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-135602.htm" title="意大利Clash全面解析：从入门到精通的高级代理工具指南">意大利Clash全面解析：从入门到精通的高级代理工具指南</a></li>
-                        <li class="py-2"><a href="/news/article-140423.htm" title="Shadowrocket自动配置全攻略：从入门到精通的安全上网指南">Shadowrocket自动配置全攻略：从入门到精通的安全上网指南</a></li>
                         <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
-                        <li class="py-2"><a href="/news/article-146855.htm" title="突破网络边界：iPhone科学上网全攻略与深度解析">突破网络边界：iPhone科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-144303.htm" title="突破网络封锁的利器：Lantern科学上网插件全方位使用指南">突破网络封锁的利器：Lantern科学上网插件全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-140070.htm" title="科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析">科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析</a></li>
-                        <li class="py-2"><a href="/news/article-133513.htm" title="颠覆与融合：The Clash的音乐革命及其文化冲击波">颠覆与融合：The Clash的音乐革命及其文化冲击波</a></li>
-                        <li class="py-2"><a href="/news/article-136517.htm" title="科学上网工具全解析：如何选择最适合你的隐私与自由之钥">科学上网工具全解析：如何选择最适合你的隐私与自由之钥</a></li>
-                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
-                        <li class="py-2"><a href="/news/article-131277.htm" title="科学上网遇阻？一文彻底解决Clash无法访问京东的难题">科学上网遇阻？一文彻底解决Clash无法访问京东的难题</a></li>
+                        <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-134532.htm" title="Shadowrocket终极指南：版本对比与高阶使用技巧全解析">Shadowrocket终极指南：版本对比与高阶使用技巧全解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-140781.htm" title="从零开始：谷歌云VPS上搭建V2Ray科学上网全攻略">从零开始：谷歌云VPS上搭建V2Ray科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-132885.htm" title="围墙内外：科学上网为何在中国步履维艰？">围墙内外：科学上网为何在中国步履维艰？</a></li>
+                        <li class="py-2"><a href="/news/article-145391.htm" title="安卓Clash深度指南：从零开始掌握高效代理工具">安卓Clash深度指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-137942.htm" title="自由之钥：深度剖析zealer科学上网的技术原理与实战应用">自由之钥：深度剖析zealer科学上网的技术原理与实战应用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
