--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -153,16 +153,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
-                        <li class="py-2"><a href="/news/article-139007.htm" title="突破网络边界：科学上网小工具的终极指南与深度解析">突破网络边界：科学上网小工具的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
-                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
                         <li class="py-2"><a href="/news/article-136876.htm" title="Potatso与v2ray兼容性全解析：突破网络限制的终极指南">Potatso与v2ray兼容性全解析：突破网络限制的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-146122.htm" title="解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa">解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa</a></li>
-                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
+                        <li class="py-2"><a href="/news/article-131625.htm" title="安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界">安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界</a></li>
+                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-145391.htm" title="安卓Clash深度指南：从零开始掌握高效代理工具">安卓Clash深度指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-137942.htm" title="自由之钥：深度剖析zealer科学上网的技术原理与实战应用">自由之钥：深度剖析zealer科学上网的技术原理与实战应用</a></li>
+                        <li class="py-2"><a href="/news/article-133850.htm" title="华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解">华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-133513.htm" title="颠覆与融合：The Clash的音乐革命及其文化冲击波">颠覆与融合：The Clash的音乐革命及其文化冲击波</a></li>
+                        <li class="py-2"><a href="/news/article-136517.htm" title="科学上网工具全解析：如何选择最适合你的隐私与自由之钥">科学上网工具全解析：如何选择最适合你的隐私与自由之钥</a></li>
+                        <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
                     </ul>
     </div>
 </div>
@@ -174,7 +174,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
