--- a/free-nodes/2025-8-21-free-high-speed-nodes.htm
+++ b/free-nodes/2025-8-21-free-high-speed-nodes.htm
@@ -303,16 +303,16 @@ A4：在不同时间段测试速度，如果本地测速正常，但代理速度
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-139007.htm" title="突破网络边界：科学上网小工具的终极指南与深度解析">突破网络边界：科学上网小工具的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-131980.htm" title="安卓Clash全面指南：从下载到精通，解锁网络自由新境界">安卓Clash全面指南：从下载到精通，解锁网络自由新境界</a></li>
-                        <li class="py-2"><a href="/news/article-136876.htm" title="Potatso与v2ray兼容性全解析：突破网络限制的终极指南">Potatso与v2ray兼容性全解析：突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-133211.htm" title="突破网络边界：电脑版科学上网全攻略与官网使用指南">突破网络边界：电脑版科学上网全攻略与官网使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-139360.htm" title="iOS科学上网全攻略：解锁数字世界的自由之门">iOS科学上网全攻略：解锁数字世界的自由之门</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-146122.htm" title="解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa">解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa</a></li>
                         <li class="py-2"><a href="/news/article-146855.htm" title="突破网络边界：iPhone科学上网全攻略与深度解析">突破网络边界：iPhone科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-133850.htm" title="华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解">华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解</a></li>
-                        <li class="py-2"><a href="/news/article-135802.htm" title="突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南">突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-132885.htm" title="围墙内外：科学上网为何在中国步履维艰？">围墙内外：科学上网为何在中国步履维艰？</a></li>
+                        <li class="py-2"><a href="/news/article-144303.htm" title="突破网络封锁的利器：Lantern科学上网插件全方位使用指南">突破网络封锁的利器：Lantern科学上网插件全方位使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-143216.htm" title="突破网络封锁：V2Ray高效连接全攻略与深度解析">突破网络封锁：V2Ray高效连接全攻略与深度解析</a></li>
                     </ul>
     </div>
 </div>
@@ -324,7 +324,7 @@ A4：在不同时间段测试速度，如果本地测速正常，但代理速度
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
