--- a/free-nodes/2025-8-23-free-subscribe-node.htm
+++ b/free-nodes/2025-8-23-free-subscribe-node.htm
@@ -152,6 +152,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-8-22-free-subscribe-node.htm">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-8-24-free-subscribe-node.htm">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -172,16 +173,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-131625.htm" title="安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界">安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界</a></li>
-                        <li class="py-2"><a href="/news/article-137233.htm" title="Clash游戏网络连接故障全解析：从根源排查到高效解决">Clash游戏网络连接故障全解析：从根源排查到高效解决</a></li>
-                        <li class="py-2"><a href="/news/article-135802.htm" title="突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南">突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
-                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
-                        <li class="py-2"><a href="/news/article-133513.htm" title="颠覆与融合：The Clash的音乐革命及其文化冲击波">颠覆与融合：The Clash的音乐革命及其文化冲击波</a></li>
-                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-133211.htm" title="突破网络边界：电脑版科学上网全攻略与官网使用指南">突破网络边界：电脑版科学上网全攻略与官网使用指南</a></li>
                         <li class="py-2"><a href="/news/article-136161.htm" title="手把手教你安装v2ray离线包：从入门到精通的完整指南">手把手教你安装v2ray离线包：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-137233.htm" title="Clash游戏网络连接故障全解析：从根源排查到高效解决">Clash游戏网络连接故障全解析：从根源排查到高效解决</a></li>
+                        <li class="py-2"><a href="/news/article-136876.htm" title="Potatso与v2ray兼容性全解析：突破网络限制的终极指南">Potatso与v2ray兼容性全解析：突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-137585.htm" title="从SSR到V2RayNG的完美迁移：全方位代理升级指南">从SSR到V2RayNG的完美迁移：全方位代理升级指南</a></li>
+                        <li class="py-2"><a href="/news/article-138290.htm" title="深度剖析Vmess协议：性能瓶颈、安全隐患与使用困境的全面审视">深度剖析Vmess协议：性能瓶颈、安全隐患与使用困境的全面审视</a></li>
+                        <li class="py-2"><a href="/news/article-134206.htm" title="掌握网络自由：Clash安卓规则配置全攻略与深度实践">掌握网络自由：Clash安卓规则配置全攻略与深度实践</a></li>
+                        <li class="py-2"><a href="/news/article-135602.htm" title="意大利Clash全面解析：从入门到精通的高级代理工具指南">意大利Clash全面解析：从入门到精通的高级代理工具指南</a></li>
+                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-140781.htm" title="从零开始：谷歌云VPS上搭建V2Ray科学上网全攻略">从零开始：谷歌云VPS上搭建V2Ray科学上网全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -193,7 +194,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
