--- a/privacy.htm
+++ b/privacy.htm
@@ -177,16 +177,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-139715.htm" title="突破网络边界：梅林86u路由器科学上网全攻略与深度体验">突破网络边界：梅林86u路由器科学上网全攻略与深度体验</a></li>
                         <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
-                        <li class="py-2"><a href="/news/article-131980.htm" title="安卓Clash全面指南：从下载到精通，解锁网络自由新境界">安卓Clash全面指南：从下载到精通，解锁网络自由新境界</a></li>
-                        <li class="py-2"><a href="/news/article-140423.htm" title="Shadowrocket自动配置全攻略：从入门到精通的安全上网指南">Shadowrocket自动配置全攻略：从入门到精通的安全上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-137233.htm" title="Clash游戏网络连接故障全解析：从根源排查到高效解决">Clash游戏网络连接故障全解析：从根源排查到高效解决</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" title="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-133513.htm" title="颠覆与融合：The Clash的音乐革命及其文化冲击波">颠覆与融合：The Clash的音乐革命及其文化冲击波</a></li>
+                        <li class="py-2"><a href="/news/article-146855.htm" title="突破网络边界：iPhone科学上网全攻略与深度解析">突破网络边界：iPhone科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
                         <li class="py-2"><a href="/news/article-143216.htm" title="突破网络封锁：V2Ray高效连接全攻略与深度解析">突破网络封锁：V2Ray高效连接全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-138651.htm" title="深入解析与彻底解决V2Ray 500错误的终极指南">深入解析与彻底解决V2Ray 500错误的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-138290.htm" title="深度剖析Vmess协议：性能瓶颈、安全隐患与使用困境的全面审视">深度剖析Vmess协议：性能瓶颈、安全隐患与使用困境的全面审视</a></li>
-                        <li class="py-2"><a href="/news/article-132620.htm" title="Clash规则配置全攻略：从入门到精通的流量管理艺术">Clash规则配置全攻略：从入门到精通的流量管理艺术</a></li>
-                        <li class="py-2"><a href="/news/article-137942.htm" title="自由之钥：深度剖析zealer科学上网的技术原理与实战应用">自由之钥：深度剖析zealer科学上网的技术原理与实战应用</a></li>
+                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
+                        <li class="py-2"><a href="/news/article-131625.htm" title="安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界">安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界</a></li>
                     </ul>
     </div>
 </div>
@@ -198,7 +198,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
