--- a/free-nodes/2025-9-3-free-high-speed-nodes.htm
+++ b/free-nodes/2025-9-3-free-high-speed-nodes.htm
@@ -184,16 +184,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-146122.htm" title="解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa">解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa</a></li>
-                        <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" title="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
-                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-5-node-share-links.htm" title="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-node-share-links.htm" title="9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" title="9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -205,7 +205,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
